Closed Bug 1140788 Opened 9 years ago Closed 9 years ago

Response.error and Response.redirect should set header guard to immutable

Categories

(Core :: DOM: Core & HTML, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla39
Tracking Status
firefox39 --- fixed

People

(Reporter: nsm, Assigned: nsm)

References

Details

Attachments

(1 file)

Assignee: nobody → nsm.nikhil
Status: NEW → ASSIGNED
Comment on attachment 8574352 [details] [diff] [review]
Set headers to immutable

Review of attachment 8574352 [details] [diff] [review]:
-----------------------------------------------------------------

LGTM. Flagging Ehsan for DOM peer sign off.
Attachment #8574352 - Flags: review?(ehsan)
Attachment #8574352 - Flags: review?(bkelly)
Attachment #8574352 - Flags: review+
Attachment #8574352 - Flags: review?(ehsan) → review+
https://hg.mozilla.org/mozilla-central/rev/1156f0f8ff0f
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.