Bug 1140788 - Set headers to immutable. r=bkelly,ehsan

--HG--
extra : rebase_source : 2174a7683df99996566299609496c5ae7740bf36